# new-crate-project

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: checkin_pipeline.rs  plan_pipeline.rs  stdin_bridge.rs
src/: lib.rs  main.rs
tests/: cli.rs
