[package]
name = "new-crate-project"
version = "0.1.0"
edition = "2024"
description = "Starter CLI crate with testable command handling"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
