[package]
name = "coachkit"
version = "0.1.0"
edition = "2024"
description = "Lightweight routine check-in and modular day-planning companion kit"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
